package com.example.week9blog;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class Week9blogApplication {

    public static void main(String[] args) {
        SpringApplication.run(Week9blogApplication.class, args);
    }

}
